--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Gallery</title>
+    <title>Image Gallery || Web_Obsession_2.0 </title>
     
     <style>
         body {
@@ -68,6 +68,7 @@
 
     <section id="gallery">
         <div class="filter">
+            <button class="filter-btn" data-filter="all">Web_Obsession_2.0</button>
             <button class="filter-btn" data-filter="all">All</button>
             <button class="filter-btn" data-filter="nature">Nature</button>
             <button class="filter-btn" data-filter="city">City</button>
